<resources>
    <string name="app_name">DriveNext</string>
    <string name="tagline">Поможем найти твою следующую поездку</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="no_connection_tagline">Проверьте подключение и повторите попытку</string>
    <string name="try_again">Повторить попытку</string>
    <string name="skip">Пропустить</string>
    <string name="onboarding1">Аренда автомобилей</string>
    <string name="onboarding1_tagline">Открой для себя удобный и доступный способ передвижения</string>
    <string name="onboarding2">Безопасно и удобно</string>
    <string name="onboarding2_tagline">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="onboarding3">Лучшие предложения</string>
    <string name="onboarding3_tagline">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="continue1">Далее</string>
    <string name="go">Поехали</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in_account">Войдите в аккаунт</string>
    <string name="enter_data">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="enter_email">Введите электронную почту</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="google_sign_in">Войти через Google</string>
    <string name="enjoy_using">Пользуйтесь с удовольствием</string>
    <string name="congratulations">Поздравляем</string>
    <string name="congratulations_tagline">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="policy">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="surname">Фамилия</string>
    <string name="enter_surname">Введите фамилию</string>
    <string name="name">Имя</string>
    <string name="enter_name">Введите имя</string>
    <string name="patronymic">Отчество</string>
    <string name="enter_patronymic">Введите отчество</string>
    <string name="dob">Дата рождения</string>
    <string name="enter_dob">DD/MM/YYYY</string>
    <string name="sex">Пол</string>
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>
    <string name="photo_description">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="drivers_license">Номер водительского удостоверения</string>
    <string name="enter_drivers_license">0000000000</string>
    <string name="drivers_license_date">Дата выдачи</string>
    <string name="drivers_license_upload">Загрузите фото водительского удостоверения</string>
    <string name="photo_upload">Загрузить фото</string>
    <string name="pass_upload">Загрузите фото паспорта</string>
    <string name="lets_find_car">Давайте найдем автомобиль</string>
    <string name="settings">Настройки</string>
    <string name="my_booking">Мои бронирования</string>
    <string name="theme">Тема</string>
    <string name="notifications">Уведомления</string>
    <string name="connect_own_car">Подключить свой автомобиль</string>
    <string name="help">Помощь</string>
    <string name="invite_friend">Пригласи друга</string>
    <string name="profile">Профиль</string>
    <string name="google">Google</string>
    <string name="logout">Выйти из профиля</string>
    <string name="change_password">Поменять пароль</string>
    <string name="car_brand_placeholder">Введите марку автомобиля</string>
    <string name="booking">Забронировать</string>
    <string name="details">Детали</string>
    <string name="search_result">Результаты поиска</string>
    <string name="new_password">Новый пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="enter_current_password">Введите текущий пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="price_format">%d₽</string>
    <string name="search_results_with_query">Результаты по запросу: \"%1$s\" (%2$d)</string>
    <string name="all_available_cars">Все доступные автомобили (%d)</string>
    <string name="no_cars_found">Автомобили не найдены</string>
</resources>