<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main">

    <TextView
        android:id="@+id/textViewMainSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/sign_in_account"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="24sp"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDataEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_data"
        android:textColor="@color/form_gray"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainSignIn" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email"
        android:textColor="@color/label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataEntry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/input_border_selector"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/form_gray"
            android:textColorHint="@color/form_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/label"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/input_border_selector"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/form_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/form_gray"
            android:textColorHint="@color/form_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/primary"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="16sp"
        android:paddingVertical="14dp"
        android:paddingHorizontal="32dp"
        android:layout_marginHorizontal="24dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="20dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword" />

    <Button
        android:id="@+id/buttonSignInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:paddingVertical="14dp"
        android:text="@string/google_sign_in"
        android:textColor="@color/secondary"
        android:textSize="16sp"
        app:icon="@drawable/google"
        app:iconTint="@null"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:cornerRadius="8dp"
        app:strokeColor="@color/borders"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"/>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/primary"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignInGoogle" />




</androidx.constraintlayout.widget.ConstraintLayout>