<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageViewArrowLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/primary"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="20sp"
        android:layout_marginEnd="34dp"
        android:paddingHorizontal="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewArrowLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSurnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/surname"
        android:textColor="@color/label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewArrowLeft" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/input_border_selector"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSurnameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:hint="@string/enter_surname"
            android:inputType="text"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/form_gray"
            android:textColorHint="@color/form_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/name"
        android:textColor="@color/label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/input_border_selector"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/form_gray"
            android:textColorHint="@color/form_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPatronymicLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/patronymic"
        android:textColor="@color/label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patronymicInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/input_border_selector"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatronymicLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patronymicEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:hint="@string/enter_patronymic"
            android:inputType="text"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/form_gray"
            android:textColorHint="@color/form_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewBirthDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dob"
        android:textColor="@color/label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patronymicInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/BirthDateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/input_border_selector"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:startIconDrawable="@drawable/calendar"
        app:startIconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBirthDateLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/BirthDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:hint="@string/enter_dob"
            android:inputType="text"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textColor="@color/form_gray"
            android:textColorHint="@color/form_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sex"
        android:textColor="@color/label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BirthDateInputLayout" />

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSex">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/form_gray"
            app:strokeWidth="1dp"
            app:buttonTint="@color/form_gray"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat"
            android:checked="true"
            android:textColor="@color/primary"
            app:strokeWidth="1dp"
            app:buttonTint="@color/primary"/>
    </RadioGroup>

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="32dp"
        android:paddingVertical="14dp"
        android:text="@string/continue1"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>