<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/imageViewNoConnection"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewNoConnection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        app:srcCompat="@drawable/no_connection" />

    <TextView
        android:id="@+id/textViewNoConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:lineSpacingExtra="24dp"
        android:paddingHorizontal="40dp"
        android:text="@string/no_connection"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNoConnection" />

    <TextView
        android:id="@+id/textViewTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/secondary"
        android:paddingHorizontal="40dp"
        android:text="@string/no_connection_tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoConnection" />

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="32dp"
        android:paddingVertical="14dp"
        android:text="@string/try_again"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTryAgain"
        app:layout_constraintVertical_bias="0.979" />
</androidx.constraintlayout.widget.ConstraintLayout>